项目/答辩版/yacc.output
Terminals unused in grammar

   UNIT
   PASS
   DRAW
   OUT
   IN
   TO
   ENDPOINT
   ACENTER
   TANGENTLINE
   COMMONTANGENTLINE
   INNERTANGENTLINE
   OUTERTANGENTLINE
   EXTENDLINE
   REEXTENDLINE
   DIAGONAL
   PBLINE
   VERTICALINE
   PARALLELINE
   ARC
   SMALLER
   GREATER
   PLUS
   MINUS
   MULTI
   DIVIDE
   POWER
   MOD
   LINK
   PROLONG
   REPROLONG
   INTOUCH
   OUTANGENT
   SAMECENTER


Grammar

    0 $accept: input $end

    1 input: sentences

    2 sentences: /* empty */
    3          | sentence sentences

    4 sentence: stmt END
    5         | error

    6 stmt: point_stmt
    7     | line_stmt
    8     | angle_stmt
    9     | triangle_stmt
   10     | quadrangle_stmt
   11     | polygon_stmt
   12     | circle_stmt
   13     | exp_stmt

   14 point_stmt: point_type POINTV IS coord
   15           | point_type POINTV AT line_type POINTV POINTV UP
   16           | POINTV IS line_type POINTV POINTV AUXILIARY MIDPOINT
   17           | POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY INCENTER
   18           | POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY OUTCENTER
   19           | POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY GCENTER
   20           | POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY VCENTER
   21           | POINTV IS circle_type OBJECTV AUXILIARY CCENTER
   22           | POINTV IS line_type POINTV POINTV AND line_type POINTV POINTV AUXILIARY INTERSECTPOINT
   23           | POINTV IS line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT
   24           | POINTV IS circle_type OBJECTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT
   25           | POINTV AND POINTV IS line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT
   26           | POINTV AND POINTV IS circle_type OBJECTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT

   27 line_stmt: POINTV POINTV IS line_type
   28          | line_type POINTV POINTV IS NUM
   29          | line_type POINTV POINTV AND line_type POINTV POINTV PARALLEL
   30          | line_type POINTV POINTV AND line_type POINTV POINTV INTERSECT AT point_type POINTV
   31          | line_type POINTV POINTV AND line_type POINTV POINTV PERPEND AT point_type POINTV
   32          | line_type POINTV POINTV PEBI line_type POINTV POINTV AT point_type POINTV
   33          | line_type POINTV POINTV EDIVISION line_type POINTV POINTV AT point_type POINTV
   34          | line_type POINTV POINTV EDIVISION angle_type POINTV POINTV POINTV
   35          | POINTV POINTV IS angle_type POINTV POINTV POINTV AUXILIARY EDIVISIONLINE
   36          | POINTV POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY MIDLINE
   37          | POINTV POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY HEIGHTLINE
   38          | POINTV POINTV IS circle_type OBJECTV AUXILIARY DIAMETER
   39          | POINTV POINTV IS circle_type OBJECTV AUXILIARY RADIUS
   40          | line_type POINTV POINTV AND circle_type OBJECTV TANGENT AT point_type POINTV
   41          | line_type POINTV POINTV AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

   42 angle_stmt: POINTV POINTV POINTV IS angle_type
   43           | angle_type POINTV POINTV POINTV IS NUM

   44 triangle_stmt: POINTV POINTV POINTV IS triangle_type
   45              | POINTV POINTV POINTV IS circle_type OBJECTV AUXILIARY OUTANGENTRIANGLE
   46              | POINTV POINTV POINTV IS circle_type OBJECTV AUXILIARY INTOUCHTRIANGLE

   47 quadrangle_stmt: POINTV POINTV POINTV POINTV IS quadrangle_type

   48 polygon_stmt: pointvs IS polygon_type

   49 circle_stmt: OBJECTV IS circle_type
   50            | OBJECTV IS AS POINTV POINTV IS DIAMETER AUXILIARY circle_type
   51            | OBJECTV IS AS POINTV IS CCENTER DOT POINTV POINTV IS RADIUS AUXILIARY circle_type
   52            | OBJECTV IS AS POINTV IS CCENTER DOT NUM IS RADIUS AUXILIARY circle_type
   53            | OBJECTV IS triangle_type POINTV POINTV POINTV AUXILIARY INTANGENTCIRCLE
   54            | OBJECTV IS triangle_type POINTV POINTV POINTV AUXILIARY OUTOUCHCIRCLE
   55            | circle_type OBJECTV OUTOUCH AT triangle_type POINTV POINTV POINTV
   56            | circle_type OBJECTV INTANGENT AT triangle_type POINTV POINTV POINTV
   57            | circle_type OBJECTV AND line_type POINTV POINTV TANGENT AT point_type POINTV
   58            | circle_type OBJECTV AND line_type POINTV POINTV INTERSECT AT point_type POINTV DOT POINTV
   59            | circle_type OBJECTV AND circle_type OBJECTV TANGENT AT point_type POINTV
   60            | circle_type OBJECTV AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

   61 exp_stmt: line_exp_stmt
   62         | angle_exp_stmt

   63 line_exp_stmt: POINTV POINTV EQUAL NUM
   64              | POINTV POINTV EQUAL POINTV POINTV
   65              | POINTV POINTV EQUAL NUM POINTV POINTV
   66              | NUM POINTV POINTV EQUAL POINTV POINTV
   67              | NUM POINTV POINTV EQUAL NUM POINTV POINTV

   68 angle_exp_stmt: POINTV POINTV POINTV EQUAL NUM
   69               | POINTV POINTV POINTV EQUAL POINTV POINTV POINTV
   70               | POINTV POINTV POINTV EQUAL NUM POINTV POINTV POINTV
   71               | NUM POINTV POINTV POINTV EQUAL POINTV POINTV POINTV
   72               | NUM POINTV POINTV POINTV EQUAL NUM POINTV POINTV POINTV

   73 pointvs: POINTV POINTV POINTV POINTV POINTV point_flw

   74 point_flw: /* empty */
   75          | POINTV point_flw

   76 point_type: POINT

   77 line_type: LINE
   78          | RAY
   79          | SEGMENT

   80 angle_type: RIGHTANGLE
   81           | ACUTEANGLE
   82           | OBTUSEANGLE
   83           | ANGLE

   84 triangle_type: TRIANGLE
   85              | ISOTRIANGLE
   86              | EQUTRIANGLE
   87              | RIGHTTRIANGLE
   88              | OBTTRIANGLE
   89              | ACUTRIANGLE
   90              | RIGHTDTRIANGLE

   91 quadrangle_type: QUADRANGLE
   92                | PARALELLQUADRANGLE
   93                | RECTANGLE
   94                | SQUARE
   95                | DIAMOND
   96                | LADDER
   97                | ISOLADDER
   98                | RIGHTLADDER

   99 polygon_type: POLYGON

  100 circle_type: CIRCLE

  101 coord: LP NUM END NUM RP


Terminals, with rules where they appear

$end (0) 0
error (256) 5
END (258) 4 101
DOT (259) 41 51 52 58 60
LP (260) 101
RP (261) 101
OBJECTV (262) 21 23 24 25 26 38 39 40 41 45 46 49 50 51 52 53 54 55
    56 57 58 59 60
POINTV (263) 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 50 51 52 53 54
    55 56 57 58 59 60 63 64 65 66 67 68 69 70 71 72 73 75
NUM (264) 28 43 52 63 65 66 67 68 70 71 72 101
UNIT (265)
IS (266) 14 16 17 18 19 20 21 22 23 24 25 26 27 28 35 36 37 38 39 42
    43 44 45 46 47 48 49 50 51 52 53 54
PASS (267)
AS (268) 50 51 52
DRAW (269)
AUXILIARY (270) 16 17 18 19 20 21 22 23 24 25 26 35 36 37 38 39 45
    46 50 51 52 53 54
UP (271) 15
OUT (272)
IN (273)
AND (274) 22 23 24 25 26 29 30 31 40 41 57 58 59 60
AT (275) 15 30 31 32 33 40 41 55 56 57 58 59 60
TO (276)
POINT (277) 76
MIDPOINT (278) 16
ENDPOINT (279)
INTERSECTPOINT (280) 22 25 26
TANGENTPOINT (281) 23 24
INCENTER (282) 17
OUTCENTER (283) 18
GCENTER (284) 19
VCENTER (285) 20
CCENTER (286) 21 51 52
ACENTER (287)
SEGMENT (288) 79
LINE (289) 77
RAY (290) 78
HEIGHTLINE (291) 37
MIDLINE (292) 36
TANGENTLINE (293)
COMMONTANGENTLINE (294)
INNERTANGENTLINE (295)
OUTERTANGENTLINE (296)
RADIUS (297) 39 51 52
DIAMETER (298) 38 50
EXTENDLINE (299)
REEXTENDLINE (300)
DIAGONAL (301)
EDIVISIONLINE (302) 35
PBLINE (303)
VERTICALINE (304)
PARALLELINE (305)
TRIANGLE (306) 84
ISOTRIANGLE (307) 85
EQUTRIANGLE (308) 86
RIGHTTRIANGLE (309) 87
OBTTRIANGLE (310) 88
ACUTRIANGLE (311) 89
INTOUCHTRIANGLE (312) 46
OUTANGENTRIANGLE (313) 45
RIGHTDTRIANGLE (314) 90
RIGHTANGLE (315) 80
ACUTEANGLE (316) 81
OBTUSEANGLE (317) 82
ANGLE (318) 83
QUADRANGLE (319) 91
PARALELLQUADRANGLE (320) 92
RECTANGLE (321) 93
SQUARE (322) 94
DIAMOND (323) 95
LADDER (324) 96
ISOLADDER (325) 97
RIGHTLADDER (326) 98
CIRCLE (327) 100
INTANGENTCIRCLE (328) 53
OUTOUCHCIRCLE (329) 54
ARC (330)
EQUAL (331) 63 64 65 66 67 68 69 70 71 72
SMALLER (332)
GREATER (333)
PLUS (334)
MINUS (335)
MULTI (336)
DIVIDE (337)
POWER (338)
MOD (339)
INTERSECT (340) 30 41 58 60
PERPEND (341) 31
PARALLEL (342) 29
TANGENT (343) 40 57 59
EDIVISION (344) 33 34
LINK (345)
PROLONG (346)
REPROLONG (347)
PEBI (348) 32
INTOUCH (349)
INTANGENT (350) 56
OUTOUCH (351) 55
OUTANGENT (352)
SAMECENTER (353)
POLYGON (354) 99


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
input (101)
    on left: 1, on right: 0
sentences (102)
    on left: 2 3, on right: 1 3
sentence (103)
    on left: 4 5, on right: 3
stmt (104)
    on left: 6 7 8 9 10 11 12 13, on right: 4
point_stmt (105)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 6
line_stmt (106)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right:
    7
angle_stmt (107)
    on left: 42 43, on right: 8
triangle_stmt (108)
    on left: 44 45 46, on right: 9
quadrangle_stmt (109)
    on left: 47, on right: 10
polygon_stmt (110)
    on left: 48, on right: 11
circle_stmt (111)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60, on right: 12
exp_stmt (112)
    on left: 61 62, on right: 13
line_exp_stmt (113)
    on left: 63 64 65 66 67, on right: 61
angle_exp_stmt (114)
    on left: 68 69 70 71 72, on right: 62
pointvs (115)
    on left: 73, on right: 48
point_flw (116)
    on left: 74 75, on right: 73 75
point_type (117)
    on left: 76, on right: 14 15 30 31 32 33 40 41 57 58 59 60
line_type (118)
    on left: 77 78 79, on right: 15 16 22 23 25 27 28 29 30 31 32 33
    34 40 41 57 58
angle_type (119)
    on left: 80 81 82 83, on right: 34 35 42 43
triangle_type (120)
    on left: 84 85 86 87 88 89 90, on right: 17 18 19 20 36 37 44 53
    54 55 56
quadrangle_type (121)
    on left: 91 92 93 94 95 96 97 98, on right: 47
polygon_type (122)
    on left: 99, on right: 48
circle_type (123)
    on left: 100, on right: 21 23 24 25 26 38 39 40 41 45 46 49 50
    51 52 55 56 57 58 59 60
coord (124)
    on left: 101, on right: 14


state 0

    0 $accept: . input $end

    error        shift, and go to state 1
    OBJECTV      shift, and go to state 2
    POINTV       shift, and go to state 3
    NUM          shift, and go to state 4
    POINT        shift, and go to state 5
    SEGMENT      shift, and go to state 6
    LINE         shift, and go to state 7
    RAY          shift, and go to state 8
    RIGHTANGLE   shift, and go to state 9
    ACUTEANGLE   shift, and go to state 10
    OBTUSEANGLE  shift, and go to state 11
    ANGLE        shift, and go to state 12
    CIRCLE       shift, and go to state 13

    $end  reduce using rule 2 (sentences)

    input            go to state 14
    sentences        go to state 15
    sentence         go to state 16
    stmt             go to state 17
    point_stmt       go to state 18
    line_stmt        go to state 19
    angle_stmt       go to state 20
    triangle_stmt    go to state 21
    quadrangle_stmt  go to state 22
    polygon_stmt     go to state 23
    circle_stmt      go to state 24
    exp_stmt         go to state 25
    line_exp_stmt    go to state 26
    angle_exp_stmt   go to state 27
    pointvs          go to state 28
    point_type       go to state 29
    line_type        go to state 30
    angle_type       go to state 31
    circle_type      go to state 32


state 1

    5 sentence: error .

    $default  reduce using rule 5 (sentence)


state 2

   49 circle_stmt: OBJECTV . IS circle_type
   50            | OBJECTV . IS AS POINTV POINTV IS DIAMETER AUXILIARY circle_type
   51            | OBJECTV . IS AS POINTV IS CCENTER DOT POINTV POINTV IS RADIUS AUXILIARY circle_type
   52            | OBJECTV . IS AS POINTV IS CCENTER DOT NUM IS RADIUS AUXILIARY circle_type
   53            | OBJECTV . IS triangle_type POINTV POINTV POINTV AUXILIARY INTANGENTCIRCLE
   54            | OBJECTV . IS triangle_type POINTV POINTV POINTV AUXILIARY OUTOUCHCIRCLE

    IS  shift, and go to state 33


state 3

   16 point_stmt: POINTV . IS line_type POINTV POINTV AUXILIARY MIDPOINT
   17           | POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY INCENTER
   18           | POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY OUTCENTER
   19           | POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY GCENTER
   20           | POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY VCENTER
   21           | POINTV . IS circle_type OBJECTV AUXILIARY CCENTER
   22           | POINTV . IS line_type POINTV POINTV AND line_type POINTV POINTV AUXILIARY INTERSECTPOINT
   23           | POINTV . IS line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT
   24           | POINTV . IS circle_type OBJECTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT
   25           | POINTV . AND POINTV IS line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT
   26           | POINTV . AND POINTV IS circle_type OBJECTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT
   27 line_stmt: POINTV . POINTV IS line_type
   35          | POINTV . POINTV IS angle_type POINTV POINTV POINTV AUXILIARY EDIVISIONLINE
   36          | POINTV . POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY MIDLINE
   37          | POINTV . POINTV IS triangle_type POINTV POINTV POINTV AUXILIARY HEIGHTLINE
   38          | POINTV . POINTV IS circle_type OBJECTV AUXILIARY DIAMETER
   39          | POINTV . POINTV IS circle_type OBJECTV AUXILIARY RADIUS
   42 angle_stmt: POINTV . POINTV POINTV IS angle_type
   44 triangle_stmt: POINTV . POINTV POINTV IS triangle_type
   45              | POINTV . POINTV POINTV IS circle_type OBJECTV AUXILIARY OUTANGENTRIANGLE
   46              | POINTV . POINTV POINTV IS circle_type OBJECTV AUXILIARY INTOUCHTRIANGLE
   47 quadrangle_stmt: POINTV . POINTV POINTV POINTV IS quadrangle_type
   63 line_exp_stmt: POINTV . POINTV EQUAL NUM
   64              | POINTV . POINTV EQUAL POINTV POINTV
   65              | POINTV . POINTV EQUAL NUM POINTV POINTV
   68 angle_exp_stmt: POINTV . POINTV POINTV EQUAL NUM
   69               | POINTV . POINTV POINTV EQUAL POINTV POINTV POINTV
   70               | POINTV . POINTV POINTV EQUAL NUM POINTV POINTV POINTV
   73 pointvs: POINTV . POINTV POINTV POINTV POINTV point_flw

    POINTV  shift, and go to state 34
    IS      shift, and go to state 35
    AND     shift, and go to state 36


state 4

   66 line_exp_stmt: NUM . POINTV POINTV EQUAL POINTV POINTV
   67              | NUM . POINTV POINTV EQUAL NUM POINTV POINTV
   71 angle_exp_stmt: NUM . POINTV POINTV POINTV EQUAL POINTV POINTV POINTV
   72               | NUM . POINTV POINTV POINTV EQUAL NUM POINTV POINTV POINTV

    POINTV  shift, and go to state 37


state 5

   76 point_type: POINT .

    $default  reduce using rule 76 (point_type)


state 6

   79 line_type: SEGMENT .

    $default  reduce using rule 79 (line_type)


state 7

   77 line_type: LINE .

    $default  reduce using rule 77 (line_type)


state 8

   78 line_type: RAY .

    $default  reduce using rule 78 (line_type)


state 9

   80 angle_type: RIGHTANGLE .

    $default  reduce using rule 80 (angle_type)


state 10

   81 angle_type: ACUTEANGLE .

    $default  reduce using rule 81 (angle_type)


state 11

   82 angle_type: OBTUSEANGLE .

    $default  reduce using rule 82 (angle_type)


state 12

   83 angle_type: ANGLE .

    $default  reduce using rule 83 (angle_type)


state 13

  100 circle_type: CIRCLE .

    $default  reduce using rule 100 (circle_type)


state 14

    0 $accept: input . $end

    $end  shift, and go to state 38


state 15

    1 input: sentences .

    $default  reduce using rule 1 (input)


state 16

    3 sentences: sentence . sentences

    error        shift, and go to state 1
    OBJECTV      shift, and go to state 2
    POINTV       shift, and go to state 3
    NUM          shift, and go to state 4
    POINT        shift, and go to state 5
    SEGMENT      shift, and go to state 6
    LINE         shift, and go to state 7
    RAY          shift, and go to state 8
    RIGHTANGLE   shift, and go to state 9
    ACUTEANGLE   shift, and go to state 10
    OBTUSEANGLE  shift, and go to state 11
    ANGLE        shift, and go to state 12
    CIRCLE       shift, and go to state 13

    $end  reduce using rule 2 (sentences)

    sentences        go to state 39
    sentence         go to state 16
    stmt             go to state 17
    point_stmt       go to state 18
    line_stmt        go to state 19
    angle_stmt       go to state 20
    triangle_stmt    go to state 21
    quadrangle_stmt  go to state 22
    polygon_stmt     go to state 23
    circle_stmt      go to state 24
    exp_stmt         go to state 25
    line_exp_stmt    go to state 26
    angle_exp_stmt   go to state 27
    pointvs          go to state 28
    point_type       go to state 29
    line_type        go to state 30
    angle_type       go to state 31
    circle_type      go to state 32


state 17

    4 sentence: stmt . END

    END  shift, and go to state 40


state 18

    6 stmt: point_stmt .

    $default  reduce using rule 6 (stmt)


state 19

    7 stmt: line_stmt .

    $default  reduce using rule 7 (stmt)


state 20

    8 stmt: angle_stmt .

    $default  reduce using rule 8 (stmt)


state 21

    9 stmt: triangle_stmt .

    $default  reduce using rule 9 (stmt)


state 22

   10 stmt: quadrangle_stmt .

    $default  reduce using rule 10 (stmt)


state 23

   11 stmt: polygon_stmt .

    $default  reduce using rule 11 (stmt)


state 24

   12 stmt: circle_stmt .

    $default  reduce using rule 12 (stmt)


state 25

   13 stmt: exp_stmt .

    $default  reduce using rule 13 (stmt)


state 26

   61 exp_stmt: line_exp_stmt .

    $default  reduce using rule 61 (exp_stmt)


state 27

   62 exp_stmt: angle_exp_stmt .

    $default  reduce using rule 62 (exp_stmt)


state 28

   48 polygon_stmt: pointvs . IS polygon_type

    IS  shift, and go to state 41


state 29

   14 point_stmt: point_type . POINTV IS coord
   15           | point_type . POINTV AT line_type POINTV POINTV UP

    POINTV  shift, and go to state 42


state 30

   28 line_stmt: line_type . POINTV POINTV IS NUM
   29          | line_type . POINTV POINTV AND line_type POINTV POINTV PARALLEL
   30          | line_type . POINTV POINTV AND line_type POINTV POINTV INTERSECT AT point_type POINTV
   31          | line_type . POINTV POINTV AND line_type POINTV POINTV PERPEND AT point_type POINTV
   32          | line_type . POINTV POINTV PEBI line_type POINTV POINTV AT point_type POINTV
   33          | line_type . POINTV POINTV EDIVISION line_type POINTV POINTV AT point_type POINTV
   34          | line_type . POINTV POINTV EDIVISION angle_type POINTV POINTV POINTV
   40          | line_type . POINTV POINTV AND circle_type OBJECTV TANGENT AT point_type POINTV
   41          | line_type . POINTV POINTV AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

    POINTV  shift, and go to state 43


state 31

   43 angle_stmt: angle_type . POINTV POINTV POINTV IS NUM

    POINTV  shift, and go to state 44


state 32

   55 circle_stmt: circle_type . OBJECTV OUTOUCH AT triangle_type POINTV POINTV POINTV
   56            | circle_type . OBJECTV INTANGENT AT triangle_type POINTV POINTV POINTV
   57            | circle_type . OBJECTV AND line_type POINTV POINTV TANGENT AT point_type POINTV
   58            | circle_type . OBJECTV AND line_type POINTV POINTV INTERSECT AT point_type POINTV DOT POINTV
   59            | circle_type . OBJECTV AND circle_type OBJECTV TANGENT AT point_type POINTV
   60            | circle_type . OBJECTV AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

    OBJECTV  shift, and go to state 45


state 33

   49 circle_stmt: OBJECTV IS . circle_type
   50            | OBJECTV IS . AS POINTV POINTV IS DIAMETER AUXILIARY circle_type
   51            | OBJECTV IS . AS POINTV IS CCENTER DOT POINTV POINTV IS RADIUS AUXILIARY circle_type
   52            | OBJECTV IS . AS POINTV IS CCENTER DOT NUM IS RADIUS AUXILIARY circle_type
   53            | OBJECTV IS . triangle_type POINTV POINTV POINTV AUXILIARY INTANGENTCIRCLE
   54            | OBJECTV IS . triangle_type POINTV POINTV POINTV AUXILIARY OUTOUCHCIRCLE

    AS              shift, and go to state 46
    TRIANGLE        shift, and go to state 47
    ISOTRIANGLE     shift, and go to state 48
    EQUTRIANGLE     shift, and go to state 49
    RIGHTTRIANGLE   shift, and go to state 50
    OBTTRIANGLE     shift, and go to state 51
    ACUTRIANGLE     shift, and go to state 52
    RIGHTDTRIANGLE  shift, and go to state 53
    CIRCLE          shift, and go to state 13

    triangle_type  go to state 54
    circle_type    go to state 55


state 34

   27 line_stmt: POINTV POINTV . IS line_type
   35          | POINTV POINTV . IS angle_type POINTV POINTV POINTV AUXILIARY EDIVISIONLINE
   36          | POINTV POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY MIDLINE
   37          | POINTV POINTV . IS triangle_type POINTV POINTV POINTV AUXILIARY HEIGHTLINE
   38          | POINTV POINTV . IS circle_type OBJECTV AUXILIARY DIAMETER
   39          | POINTV POINTV . IS circle_type OBJECTV AUXILIARY RADIUS
   42 angle_stmt: POINTV POINTV . POINTV IS angle_type
   44 triangle_stmt: POINTV POINTV . POINTV IS triangle_type
   45              | POINTV POINTV . POINTV IS circle_type OBJECTV AUXILIARY OUTANGENTRIANGLE
   46              | POINTV POINTV . POINTV IS circle_type OBJECTV AUXILIARY INTOUCHTRIANGLE
   47 quadrangle_stmt: POINTV POINTV . POINTV POINTV IS quadrangle_type
   63 line_exp_stmt: POINTV POINTV . EQUAL NUM
   64              | POINTV POINTV . EQUAL POINTV POINTV
   65              | POINTV POINTV . EQUAL NUM POINTV POINTV
   68 angle_exp_stmt: POINTV POINTV . POINTV EQUAL NUM
   69               | POINTV POINTV . POINTV EQUAL POINTV POINTV POINTV
   70               | POINTV POINTV . POINTV EQUAL NUM POINTV POINTV POINTV
   73 pointvs: POINTV POINTV . POINTV POINTV POINTV point_flw

    POINTV  shift, and go to state 56
    IS      shift, and go to state 57
    EQUAL   shift, and go to state 58


state 35

   16 point_stmt: POINTV IS . line_type POINTV POINTV AUXILIARY MIDPOINT
   17           | POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY INCENTER
   18           | POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY OUTCENTER
   19           | POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY GCENTER
   20           | POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY VCENTER
   21           | POINTV IS . circle_type OBJECTV AUXILIARY CCENTER
   22           | POINTV IS . line_type POINTV POINTV AND line_type POINTV POINTV AUXILIARY INTERSECTPOINT
   23           | POINTV IS . line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT
   24           | POINTV IS . circle_type OBJECTV AND circle_type OBJECTV AUXILIARY TANGENTPOINT

    SEGMENT         shift, and go to state 6
    LINE            shift, and go to state 7
    RAY             shift, and go to state 8
    TRIANGLE        shift, and go to state 47
    ISOTRIANGLE     shift, and go to state 48
    EQUTRIANGLE     shift, and go to state 49
    RIGHTTRIANGLE   shift, and go to state 50
    OBTTRIANGLE     shift, and go to state 51
    ACUTRIANGLE     shift, and go to state 52
    RIGHTDTRIANGLE  shift, and go to state 53
    CIRCLE          shift, and go to state 13

    line_type      go to state 59
    triangle_type  go to state 60
    circle_type    go to state 61


state 36

   25 point_stmt: POINTV AND . POINTV IS line_type POINTV POINTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT
   26           | POINTV AND . POINTV IS circle_type OBJECTV AND circle_type OBJECTV AUXILIARY INTERSECTPOINT

    POINTV  shift, and go to state 62


state 37

   66 line_exp_stmt: NUM POINTV . POINTV EQUAL POINTV POINTV
   67              | NUM POINTV . POINTV EQUAL NUM POINTV POINTV
   71 angle_exp_stmt: NUM POINTV . POINTV POINTV EQUAL POINTV POINTV POINTV
   72               | NUM POINTV . POINTV POINTV EQUAL NUM POINTV POINTV POINTV

    POINTV  shift, and go to state 63


state 38

    0 $accept: input $end .

    $default  accept


state 39

    3 sentences: sentence sentences .

    $default  reduce using rule 3 (sentences)


state 40

    4 sentence: stmt END .

    $default  reduce using rule 4 (sentence)


state 41

   48 polygon_stmt: pointvs IS . polygon_type

    POLYGON  shift, and go to state 64

    polygon_type  go to state 65


state 42

   14 point_stmt: point_type POINTV . IS coord
   15           | point_type POINTV . AT line_type POINTV POINTV UP

    IS  shift, and go to state 66
    AT  shift, and go to state 67


state 43

   28 line_stmt: line_type POINTV . POINTV IS NUM
   29          | line_type POINTV . POINTV AND line_type POINTV POINTV PARALLEL
   30          | line_type POINTV . POINTV AND line_type POINTV POINTV INTERSECT AT point_type POINTV
   31          | line_type POINTV . POINTV AND line_type POINTV POINTV PERPEND AT point_type POINTV
   32          | line_type POINTV . POINTV PEBI line_type POINTV POINTV AT point_type POINTV
   33          | line_type POINTV . POINTV EDIVISION line_type POINTV POINTV AT point_type POINTV
   34          | line_type POINTV . POINTV EDIVISION angle_type POINTV POINTV POINTV
   40          | line_type POINTV . POINTV AND circle_type OBJECTV TANGENT AT point_type POINTV
   41          | line_type POINTV . POINTV AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

    POINTV  shift, and go to state 68


state 44

   43 angle_stmt: angle_type POINTV . POINTV POINTV IS NUM

    POINTV  shift, and go to state 69


state 45

   55 circle_stmt: circle_type OBJECTV . OUTOUCH AT triangle_type POINTV POINTV POINTV
   56            | circle_type OBJECTV . INTANGENT AT triangle_type POINTV POINTV POINTV
   57            | circle_type OBJECTV . AND line_type POINTV POINTV TANGENT AT point_type POINTV
   58            | circle_type OBJECTV . AND line_type POINTV POINTV INTERSECT AT point_type POINTV DOT POINTV
   59            | circle_type OBJECTV . AND circle_type OBJECTV TANGENT AT point_type POINTV
   60            | circle_type OBJECTV . AND circle_type OBJECTV INTERSECT AT point_type POINTV DOT POINTV

    AND        shift, and go to state 70
    INTANGENT  shift, and go to state 71
    OUTOUCH    shift, and go to state 72


state 46

   50 circle_stmt: OBJECTV IS AS . POINTV POINTV IS DIAMETER AUXILIARY circle_type
   51            | OBJECTV IS AS . POINTV IS CCENTER DOT POINTV POINTV IS RADIUS AUXILIARY circle_type
   52            | OBJECTV IS AS . POINTV IS CCENTER DOT NUM IS RADIUS AUXILIARY circle_type

    POINTV  shift, and go to state 73


state 47

   84 triangle_type: TRIANGLE .

    $default  reduce using rule 84 (triangle_type)


state 48

   85 triangle_type: ISOTRIANGLE .

    $default  reduce using rule 85 (triangle_type)


state 49

   86 triangle_type: EQUTRIANGLE .

    $default  reduce using rule 86 (triangle_type)


state 50

   87 triangle_type: RIGHTTRIANGLE .

    $default  reduce using rule 87 (triangle_type)


state 51

   88 triangle_type: OBTTRIANGLE .

    $default  reduce using rule 88 (triangle_type)


state 52

   89 triangle_type: ACUTRIANGLE .

    $default  reduce using rule 89 (triangle_type)


state 53

   90 triangle_type: RIGHTDTRIANGLE .

    $default  reduce using rule 90 (triangle_type)


state 54

   53 circle_stmt: OBJECTV IS triangle_type . POINTV POINTV POINTV AUXILIARY INTANGENTCIRCLE
   54            | OBJECTV IS triangle_type . POINTV POINTV POINTV AUXILIARY OUTOUCHCIRCLE

    POINTV  shift, and go to state 74


state 55

   49 circle_stmt: OBJECTV IS circle_type .

    $default  reduce using rule 49 (circle_stmt)


state 56

   42 angle_stmt: POINTV POINTV POINTV . IS angle_type
   44 triangle_stmt: POINTV POINTV POINTV . IS triangle_type
   45              | POINTV POINTV POINTV . IS circle_type OBJECTV AUXILIARY OUTANGENTRIANGLE
   46              | POINTV POINTV POINTV . IS circle_type OBJECTV AUXILIARY INTOUCHTRIANGLE
   47 quadrangle_stmt: POINTV POINTV POINTV . POINTV IS quadrangle_type
   68 angle_exp_stmt: POINTV POINTV POINTV . EQUAL NUM
   69               | POINTV POINTV POINTV . EQUAL POINTV POINTV POINTV
   70               | POINTV POINTV POINTV . EQUAL NUM POINTV POINTV POINTV
   73 pointvs: POINTV POINTV POINTV . POINTV POINTV point_flw

    POINTV  shift, and go to state 75
    IS      shift, and go to state 76
    EQUAL   shift, and go to state 77


state 57

   27 line_stmt: POINTV POINTV IS . line_type
   35          | POINTV POINTV IS . angle_type POINTV POINTV POINTV AUXILIARY EDIVISIONLINE
   36          | POINTV POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY MIDLINE
   37          | POINTV POINTV IS . triangle_type POINTV POINTV POINTV AUXILIARY HEIGHTLINE
   38          | POINTV POINTV IS . circle_type OBJECTV AUXILIARY DIAMETER
   39          | POINTV POINTV IS . circle_type OBJECTV AUXILIARY RADIUS

    SEGMENT         shift, and go to state 6
    LINE            shift, and go to state 7
    RAY             shift, and go to state 8
    TRIANGLE        shift, and go to state 47
    ISOTRIANGLE     shift, and go to state 48
    EQUTRIANGLE     shift, and go to state 49
    RIGHTTRIANGLE   shift, and go to state 50
    OBTTRIANGLE     shift, and go to state 51
    ACUTRIANGLE     shift, and go to state 52
    RIGHTDTRIANGLE  shift, and go to state 53
    RIGHTANGLE      shift, and go to state 9
    ACUTEANGLE      shift, and go to state 10
    OBTUSEANGLE     shift, and go to state 11
    ANGLE           shift, and go to state 12
    CIRCLE          shift, and go to state 13

    line_type      go to state 78
    angle_type     go to state 79
    triangle_type  go to state 80
    circle_type    go to state 81


state 58

   63 line_exp_stmt: POINTV POINTV EQUAL . NUM
